--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>👋 Welcome to NodeApp!</h1>
     <p>This is an auto-deployed Node.js application.</p>
-    <button onclick="alert('Thanks for visiting!')">Click Me</button>
+    <button onclick="alert('Thanks for visiting 🙏')">Click Me</button>
   </div>
 </body>
 </html>
