--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>👋 Welcome to our NodeApp!</h1>
+    <h1>👋 Welcome to NodeApp!</h1>
     <p>This is an auto-deployed Node.js application.</p>
     <button onclick="alert('Thanks for visiting 😊')">Click Me</button>
   </div>
