--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>👋 Welcome to NodeApp!</h1>
-    <p>This is an auto-deployed Node.js application.</p>
+    <p class="p1">This is an auto-deployed Node.js application.</p>
     <button onclick="alert('Thanks for visiting 😊')">Click Me</button>
   </div>
 </body>
