--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>👋 Welcome to NodeApp!</h1>
     <p class="p1">This is an auto-deployed Node.js application.</p>
-    <button onclick="alert('Thanks for visiting 😊')">Click me</button>
+    <button onclick="alert('Thanks for visiting 😊')">Click here</button>
   </div>
 </body>
 </html>
